--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,203 +1,1 @@
-<!-- Header
-   ================================================= -->
-<header id="header-inverse">
-  <nav class="navbar navbar-default navbar-fixed-top menu">
-    <div class="container">
-
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo" /></a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right main-menu">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu newsfeed-home">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
-              <li><a href="newsfeed-messages.html">Chatroom</a></li>
-              <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu login">
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
-              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
-              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
-              <li><a href="edit-profile-settings.html">Account Settings</a></li>
-              <li><a href="edit-profile-password.html">Change Password</a></li>
-            </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
-            <ul class="dropdown-menu page-list">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
-              <li><a href="newsfeed-messages.html">Chatroom</a></li>
-              <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit Profile</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a href="contact.html">Contact</a></li>
-        </ul>
-        <form class="navbar-form navbar-right hidden-sm">
-          <div class="form-group">
-            <i class="icon ion-android-search"></i>
-            <input type="text" class="form-control" placeholder="Search friends, photos, videos">
-          </div>
-        </form>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container -->
-  </nav>
-</header>
-<!--Header End-->
-
-<!-- Landing Page Contents
-================================================= -->
-<div id="lp-register">
-  <div class="container wrapper">
-    <div class="row">
-      <div class="col-sm-5">
-        <div class="intro-texts">
-          <h1 class="text-white">Make Cool Friends !!!</h1>
-          <p> <span style="font-size: 2em">Don’t miss what’s happening</span>
-
-             <br /> <br />People on Friend Finder are the first to know.</p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-sm-offset-1">
-        <div class="reg-form-container">
-
-          <!-- Register/Login Tabs-->
-          <div class="reg-options">
-            <ul class="nav nav-tabs">
-              <li class="active"><a href="#register" data-toggle="tab">Register</a></li>
-              <li><a href="#login" data-toggle="tab">Login</a></li>
-            </ul><!--Tabs End-->
-          </div>
-
-          <!--Registration Form Contents-->
-          <div class="tab-content">
-            <div class="tab-pane active" id="register">
-              <h3>Register Now !!!</h3>
-              <p class="text-muted">Be cool and join today. Meet millions</p>
-
-              <!--Register Form-->
-              <form name="registration_form" id='registration_form' class="form-inline">
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="username" class="sr-only">Username</label>
-                    <input id="username" class="form-control input-group-lg" type="text" name="username" title="Enter Username" placeholder="Your Username"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="password" class="sr-only">Password</label>
-                    <input id="password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="rePassword" class="sr-only">Re-Password</label>
-                    <input id="rePassword" class="form-control input-group-lg" type="password" name="rePassword" title="Enter password again" placeholder="Confirm Your Password"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="email" class="sr-only">Email</label>
-                    <input id="email" class="form-control input-group-lg" type="text" name="Email" title="Enter Email" placeholder="Your Email"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="phone" class="sr-only">Phone number</label>
-                    <input id="phone" class="form-control input-group-lg" type="number" name="phone" title="Enter Phone number" placeholder="Your Phone Number"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <p class="birth"><strong>Date of Birth</strong></p>
-                  <div style="width: 100% !important;" class="form-group col-sm-3 col-xs-6">
-                    <label for="month" class="sr-only"></label>
-                    <input id="month" class="form-control input-group-lg" name="dateOfBirth" type="date">
-                  </div>
-                </div>
-              </form><!--Register Now Form Ends-->
-              <p><a href="#">Already have an account?</a></p>
-              <button class="btn btn-primary">Register Now</button>
-            </div><!--Registration Form Contents Ends-->
-
-            <!--Login-->
-            <div class="tab-pane" id="login">
-              <h3>Login</h3>
-              <p class="text-muted">Log into your account</p>
-
-              <!--Login Form-->
-              <form name="Login_form" id='Login_form'>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="my-username" class="sr-only">Username</label>
-                    <input id="my-username" class="form-control input-group-lg" type="text" name="Username" title="Enter username" placeholder="Your Username"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="my-password" class="sr-only">Password</label>
-                    <input id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
-                  </div>
-                </div>
-              </form><!--Login Form Ends-->
-              <p><a href="#">Forgot Password?</a></p>
-              <button class="btn btn-primary">Login Now</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 col-sm-offset-6">
-
-        <!--Social Icons-->
-        <ul class="list-inline social-icons">
-          <li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="icon ion-social-googleplus"></i></a></li>
-          <li><a href="#"><i class="icon ion-social-pinterest"></i></a></li>
-          <li><a href="#"><i class="icon ion-social-linkedin"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<router-outlet></router-outlet>
