--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -394,7 +394,7 @@ textarea{
 
 #header-inverse nav.menu{
   background: transparent;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   z-index: 1030;
 }
 
