--- a/src/app/module/login-register/register-login/register-login.component.html
+++ b/src/app/module/login-register/register-login/register-login.component.html
@@ -1,7 +1,7 @@
 <!-- Header
    ================================================= -->
 <header id="header-inverse">
-  <nav class="navbar navbar-default navbar-fixed-top menu">
+  <nav style="background-color: black!important; " class="navbar navbar-default navbar-fixed-top menu">
     <div class="container">
 
       <!-- Brand and toggle get grouped for better mobile display -->
@@ -73,8 +73,8 @@
         </ul>
         <form class="navbar-form navbar-right hidden-sm">
           <div class="form-group">
-            <i class="icon ion-android-search"></i>
-            <input type="text" class="form-control" placeholder="Search friends, photos, videos">
+            <i style="color: black" class="icon ion-android-search"></i>
+            <input style="background-color: white" type="text" class="form-control" placeholder="Search friends, photos, videos">
           </div>
         </form>
       </div><!-- /.navbar-collapse -->
@@ -114,47 +114,48 @@
               <p class="text-muted">Be cool and join today. Meet millions</p>
 
               <!--Register Form-->
-              <form name="registration_form" id='registration_form' class="form-inline">
+              <form [formGroup]="registerForm" (ngSubmit)="register()" name="registration_form" id='registration_form' class="form-inline">
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="username" class="sr-only">Username</label>
-                    <input id="username" class="form-control input-group-lg" type="text" name="username" title="Enter Username" placeholder="Your Username"/>
+                    <input formControlName="newUserName" id="username" class="form-control input-group-lg" type="text" name="username" title="Enter Username" placeholder="Your Username"/>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="password" class="sr-only">Password</label>
-                    <input id="password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
+                    <input formControlName="newPassWord" id="password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="rePassword" class="sr-only">Re-Password</label>
-                    <input id="rePassword" class="form-control input-group-lg" type="password" name="rePassword" title="Enter password again" placeholder="Confirm Your Password"/>
+                    <input formControlName="newConfirmPassWord" id="rePassword" class="form-control input-group-lg" type="password" name="rePassword" title="Enter password again" placeholder="Confirm Your Password"/>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="email" class="sr-only">Email</label>
-                    <input id="email" class="form-control input-group-lg" type="text" name="Email" title="Enter Email" placeholder="Your Email"/>
+                    <input formControlName="newEmail" id="email" class="form-control input-group-lg" type="text" name="Email" title="Enter Email" placeholder="Your Email"/>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="phone" class="sr-only">Phone number</label>
-                    <input id="phone" class="form-control input-group-lg" type="number" name="phone" title="Enter Phone number" placeholder="Your Phone Number"/>
+                    <input formControlName="newPhoneNumber" id="phone" class="form-control input-group-lg" type="text" name="phone" title="Enter Phone number" placeholder="Your Phone Number"/>
                   </div>
                 </div>
                 <div class="row">
                   <p class="birth"><strong>Date of Birth</strong></p>
                   <div style="width: 100% !important;" class="form-group col-sm-3 col-xs-6">
                     <label for="month" class="sr-only"></label>
-                    <input id="month" class="form-control input-group-lg" name="dateOfBirth" type="date">
+                    <input formControlName="newDateOfBirth" id="month" class="form-control input-group-lg" name="dateOfBirth" type="date">
                   </div>
                 </div>
+                <p><a href="#">Already have an account?</a></p>
+                <button class="btn btn-primary">Register Now</button>
               </form><!--Register Now Form Ends-->
-              <p><a href="#">Already have an account?</a></p>
-              <button class="btn btn-primary">Register Now</button>
+
             </div><!--Registration Form Contents Ends-->
 
             <!--Login-->
@@ -163,22 +164,22 @@
               <p class="text-muted">Log into your account</p>
 
               <!--Login Form-->
-              <form name="Login_form" id='Login_form'>
+              <form [formGroup]="loginForm" (ngSubmit)="login()" name="Login_form" id='Login_form'>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-username" class="sr-only">Username</label>
-                    <input id="my-username" class="form-control input-group-lg" type="text" name="Username" title="Enter username" placeholder="Your Username"/>
+                    <input formControlName="username" id="my-username" class="form-control input-group-lg" type="text" name="Username" title="Enter username" placeholder="Your Username"/>
                   </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-password" class="sr-only">Password</label>
-                    <input id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
+                    <input formControlName="password" id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
                   </div>
                 </div>
+                <p><a href="#">Forgot Password?</a></p>
+                <button class="btn btn-primary">Login Now</button>
               </form><!--Login Form Ends-->
-              <p><a href="#">Forgot Password?</a></p>
-              <button class="btn btn-primary">Login Now</button>
             </div>
           </div>
         </div>
