--- a/src/styles.css
+++ b/src/styles.css
@@ -388,7 +388,7 @@ textarea{
 
 #header-inverse nav.menu{
   background: transparent;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   z-index: 1030;
 }
 
