--- a/src/app/module/login-register/register-login/register-login.component.html
+++ b/src/app/module/login-register/register-login/register-login.component.html
@@ -119,6 +119,10 @@
                   <div class="form-group col-xs-12">
                     <label for="username" class="sr-only">Username</label>
                     <input formControlName="newUserName" id="username" class="form-control input-group-lg" type="text" name="username" title="Enter Username" placeholder="Your Username"/>
+                    <div style="color: red;padding-left: 30px" role="alert"
+                         *ngIf="registerForm.controls['newUserName'].errors?.['required']
+         && registerForm.controls['newUserName'].touched">Username is required!
+                    </div>
                   </div>
                 </div>
                 <div class="row">
@@ -144,7 +148,18 @@
                     <label for="rePassword" class="sr-only">Re-Password</label>
                     <input formControlName="newConfirmPassWord" id="rePassword" class="form-control input-group-lg" type="password" name="rePassword" title="Enter password again" placeholder="Confirm Your Password"/>
                   </div>
-
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newConfirmPassWord'].errors?.['required']
+         && registerForm.controls['newConfirmPassWord'].touched">Password is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newConfirmPassWord'].errors?.['minlength']
+         && registerForm.controls['newConfirmPassWord'].touched">Password length must be between 6 to 32!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newConfirmPassWord'].errors?.['maxlength']
+         && registerForm.controls['newConfirmPassWord'].touched">Password length must be between 6 to 32!
+                  </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
@@ -165,6 +180,10 @@
                     <label for="phone" class="sr-only">Phone number</label>
                     <input formControlName="newPhoneNumber" id="phone" class="form-control input-group-lg" type="text"
                            name="phone" title="Enter Phone number" placeholder="Your Phone Number"/>
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newPhoneNumber'].errors?.['required']
+         && registerForm.controls['newPhoneNumber'].touched">Phone number is required!
                   </div>
                 </div>
                 <div class="row">
@@ -192,11 +211,27 @@
                     <label for="my-username" class="sr-only">Username</label>
                     <input formControlName="username" id="my-username" class="form-control input-group-lg" type="text" name="Username" title="Enter username" placeholder="Your Username"/>
                   </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="loginForm.controls['username'].errors?.['required']
+         && loginForm.controls['username'].touched">Username is required!
+                  </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-password" class="sr-only">Password</label>
                     <input formControlName="password" id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Password"/>
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="loginForm.controls['password'].errors?.['required']
+         && loginForm.controls['password'].touched">Password is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="loginForm.controls['password'].errors?.['minlength']
+         && loginForm.controls['password'].touched">Password length must be between 6 to 32!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="loginForm.controls['password'].errors?.['maxlength']
+         && loginForm.controls['password'].touched">Password length must be between 6 to 32!
                   </div>
                 </div>
                 <p><a href="#">Forgot Password?</a></p>
