update giao dien add friend

--- a/src/app/module/login-register/register-login/register-login.component.html
+++ b/src/app/module/login-register/register-login/register-login.component.html
@@ -165,6 +165,14 @@
                     <input formControlName="newPhoneNumber" id="phone" class="form-control input-group-lg" type="text"
                            name="phone" title="Enter Phone number" placeholder="Your Phone Number"/>
                   </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newPhoneNumber'].errors?.['required']
+         && registerForm.controls['newPhoneNumber'].touched">Phone number is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="registerForm.controls['newPhoneNumber'].errors?.['pattern']
+         && registerForm.controls['newPhoneNumber'].touched">Not a valid number!
+                  </div>
                 </div>
                 <div class="row">
                   <p class="birth"><strong>Date of Birth</strong></p>
