--- a/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
+++ b/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
@@ -1,28 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="This is social network html5 template available in themeforest......" />
-  <meta name="keywords" content="Social Network, Social Media, Make Friends, Newsfeed, Profile Page" />
-  <meta name="robots" content="index, follow" />
-  <title>Nearby People | Find Local People</title>
-
-  <!-- Stylesheets
-  ================================================= -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/ionicons.min.css" />
-  <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-  <!--Google Font-->
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet">
-
-  <!--Favicon-->
-  <link rel="shortcut icon" type="image/png" href="images/fav.png"/>
-</head>
-<body>
-
 <!-- Header
 ================================================= -->
 <header id="header">
@@ -172,7 +147,7 @@
 
         <!-- Nearby People List
         ================================================= -->
-        <div class="people-nearby">
+        <div class="people-nearby" >
           <div class="google-maps">
             <div id="map" class="map"></div>
           </div>
@@ -187,7 +162,7 @@
                 <p class="text-muted">500m away</p>
               </div>
               <div class="col-md-3 col-sm-3">
-                <button class="btn btn-primary pull-right">Add Friend</button>
+                <button class="btn btn-primary pull-right" (click)="addFriend()">Add Friend</button>
               </div>
             </div>
           </div>
@@ -438,20 +413,3 @@
     <p>Thunder Team © 2016. All rights reserved</p>
   </div>
 </footer>
-
-<!--preloader-->
-<div id="spinner-wrapper">
-  <div class="spinner"></div>
-</div>
-
-<!-- Scripts
-================================================= -->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTMXfmDn0VlqWIyoOxK8997L-amWbUPiQ&callback=initMap"></script>
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.sticky-kit.min.js"></script>
-<script src="js/jquery.scrollbar.min.js"></script>
-<script src="js/script.js"></script>
-
-</body>
-</html>
