update_profile_fe_be_done

--- a/src/app/module/user/edit-profile/edit-profile.component.html
+++ b/src/app/module/user/edit-profile/edit-profile.component.html
@@ -69,7 +69,7 @@
           </li>
           <li class="dropdown"><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a >{{currentUser.username}}</a></li>
-          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="assets/images/defaultAva.png" alt=""></li>
+          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}" alt=""></li>
         </ul>
         <form class="navbar-form navbar-right hidden-sm">
           <div class="form-group">
@@ -88,7 +88,7 @@
   <!-- Timeline
   ================================================= -->
   <div class="timeline">
-    <div class="timeline-cover">
+    <div [ngStyle]="{'background': 'url(' + cover + ')'}" class="timeline-cover">
 
       <!--Timeline Menu for Large Screens-->
       <div class="timeline-nav-bar hidden-sm hidden-xs">
@@ -117,7 +117,7 @@
       <!--Timeline Menu for Small Screens-->
       <div class="navbar-mobile hidden-lg hidden-md">
         <div class="profile-info">
-          <img src="http://placehold.it/300x300" alt="" class="img-responsive profile-photo" />
+          <img src="{{avatar}}" alt="" class="img-responsive profile-photo" />
           <h4>Sarah Cruiz</h4>
           <p class="text-muted">Creative Director</p>
         </div>
@@ -155,23 +155,39 @@
               <div class="line"></div>
             </div>
             <div class="edit-block">
+              <div class="form-group col-12">
+                <label for="avatar">My Avatar</label>
+                <input type="file"
+                       id="avatar"
+                       #userPhoto
+                       (change)="onFileSelected($event)"
+                       name="image"
+                       autocomplete="off"
+                />
+              </div>
+              <div class="form-group col-12">
+                <label for="cover">My Cover</label>
+                <input type="file"
+                       id="cover"
+                       #userPhoto
+                       (change)="onFileSelected1($event)"
+                       name="image"
+                       autocomplete="off"
+                />
+              </div>
               <form [formGroup]="updateForm" (ngSubmit)="update()" name="basic-info" id="basic-info" class="form-inline">
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="avatar">My avatar</label>
-                    <input formControlName="avatar" id="avatar" class="form-control input-group-lg" type="file" name="avatar" title="Upload avatar"   />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="cover">My cover</label>
-                    <input formControlName="cover" id="cover" class="form-control input-group-lg" type="file" name="cover" title="Upload cover"/>
-                  </div>
-                </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="fullname">My full name</label>
                     <input formControlName="fullName" id="fullname" class="form-control input-group-lg" type="text" name="fullname" title="Enter fullname" />
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['fullName'].errors?.['required']
+         && updateForm.controls['fullName'].touched">Full name is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['fullName'].errors?.['pattern']
+         && updateForm.controls['fullName'].touched">Not a valid name!
                   </div>
                 </div>
                 <div class="row">
@@ -180,11 +196,27 @@
                     <input formControlName="phone" id="phone" class="form-control input-group-lg" type="text"
                            name="phone" title="Enter Phone number" />
                   </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['phone'].errors?.['required']
+         && updateForm.controls['phone'].touched">Phone number is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['phone'].errors?.['pattern']
+         && updateForm.controls['phone'].touched">Not a valid number!
+                  </div>
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="address">My address</label>
                     <input formControlName = "address" id="address" class="form-control input-group-lg" type="text" name="address" title="Enter address" />
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['address'].errors?.['required']
+         && updateForm.controls['address'].touched">Address is required!
+                  </div>
+                  <div style="color: red;padding-left: 30px" role="alert"
+                       *ngIf="updateForm.controls['address'].errors?.['pattern']
+         && updateForm.controls['address'].touched">Not a valid address!
                   </div>
                 </div>
                 <div class="row">
