done chức năng hủy lời mời kết bạn

--- a/src/app/module/user/friend-relation/friend-request/friend-request.component.html
+++ b/src/app/module/user/friend-relation/friend-request/friend-request.component.html
@@ -197,7 +197,7 @@
                               (click)="acceptFriend(user.id)">Confirm
                       </button>
                       <br>
-                      <button class="btn btn-light" style="padding: 7px 29px; border-radius: 30px">Delete</button>
+                      <button class="btn btn-light" style="padding: 7px 29px; border-radius: 30px" (click)="deleteRequest(user.id)">Delete</button>
                     </div>
                     <!--                    <a href="#" class="pull-right text-green">My Friend</a>-->
                     <h5><a href="timeline.html" class="profile-link">{{user.username}}</a></h5>
