--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -119,7 +119,7 @@
           </li>
 <!--          <li><i class="icon ion-ios-videocam"></i>-->
           <li><i class="icon ion-ios-people"></i>
-            <div><a routerLink="/user/friend-request">Friend Request</a></div>
+            <div><a routerLink="/user/requests">Friend Request</a></div>
           </li>
         </ul><!--news-feed links ends-->
         <div id="chat-block">
