--- a/src/app/module/user/edit-password/edit-password.component.html
+++ b/src/app/module/user/edit-password/edit-password.component.html
@@ -45,7 +45,7 @@
               <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
               <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
-              <li><a routerLink="/user/password">Change Password</a></li>
+              <li><a href="edit-profile-password.html">Change Password</a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -138,99 +138,47 @@
 
           <!--Edit Profile Menu-->
           <ul class="edit-menu">
-            <li class="active"><i class="icon ion-ios-information-outline"></i><a routerLink="/user/edit">Basic Information</a></li>
-<!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
-<!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
+            <li ><i class="icon ion-ios-information-outline"></i><a routerLink="/user/edit">Basic Information</a></li>
+            <!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
+            <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
             <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>
-            <li><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
+            <li class="active"><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
           </ul>
         </div>
         <div class="col-md-7">
 
-          <!-- Basic Information
-          ================================================= -->
+          <!-- Change Password
+             ================================================= -->
           <div class="edit-profile-container">
             <div class="block-title">
-              <h4 class="grey"><i class="icon ion-android-checkmark-circle"></i>Edit basic information</h4>
+              <h4 class="grey"><i class="icon ion-ios-locked-outline"></i>Change Password</h4>
+              <div class="line"></div>
+              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
               <div class="line"></div>
             </div>
             <div class="edit-block">
-              <div class="form-group col-12">
-                <label for="avatar">My Avatar</label>
-                <input type="file"
-                       id="avatar"
-                       #userPhoto
-                       (change)="onFileSelected($event)"
-                       name="image"
-                       autocomplete="off"
-                />
-              </div>
-              <div class="form-group col-12">
-                <label for="cover">My Cover</label>
-                <input type="file"
-                       id="cover"
-                       #userPhoto
-                       (change)="onFileSelected1($event)"
-                       name="image"
-                       autocomplete="off"
-                />
-              </div>
-              <form [formGroup]="updateForm" (ngSubmit)="update()" name="basic-info" id="basic-info" class="form-inline">
+              <form name="update-pass" id="education" class="form-inline">
                 <div class="row">
                   <div class="form-group col-xs-12">
-                    <label for="fullname">My full name</label>
-                    <input formControlName="fullName" id="fullname" class="form-control input-group-lg" type="text" name="fullname" title="Enter fullname" />
-                  </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['fullName'].errors?.['required']
-         && updateForm.controls['fullName'].touched">Full name is required!
-                  </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['fullName'].errors?.['pattern']
-         && updateForm.controls['fullName'].touched">Not a valid name!
+                    <label for="my-password">Old password</label>
+                    <input id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Old password"/>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="phone">Phone number</label>
-                    <input formControlName="phone" id="phone" class="form-control input-group-lg" type="text"
-                           name="phone" title="Enter Phone number" />
+                  <div class="form-group col-xs-6">
+                    <label>New password</label>
+                    <input class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="New password"/>
                   </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['phone'].errors?.['required']
-         && updateForm.controls['phone'].touched">Phone number is required!
-                  </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['phone'].errors?.['pattern']
-         && updateForm.controls['phone'].touched">Not a valid number!
+                  <div class="form-group col-xs-6">
+                    <label>Confirm password</label>
+                    <input class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Confirm password"/>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="address">My address</label>
-                    <input formControlName = "address" id="address" class="form-control input-group-lg" type="text" name="address" title="Enter address" />
-                  </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['address'].errors?.['required']
-         && updateForm.controls['address'].touched">Address is required!
-                  </div>
-                  <div style="color: red;padding-left: 30px" role="alert"
-                       *ngIf="updateForm.controls['address'].errors?.['pattern']
-         && updateForm.controls['address'].touched">Not a valid address!
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="my-favorite">My favorite</label>
-                    <textarea formControlName="favorite" id="my-favorite" name="information" class="form-control"  rows="4" cols="400"></textarea>
-                  </div>
-                </div>
-                <button class="btn btn-primary">Save Changes</button>
+                <p><a href="#">Forgot Password?</a></p>
+                <button class="btn btn-primary">Update Password</button>
               </form>
             </div>
           </div>
-        </div>
-        <div class="col-md-2 static">
 
           <!--Sticky Timeline Activity Sidebar-->
 
