--- a/src/app/module/post/components/list-post/list-post.component.html
+++ b/src/app/module/post/components/list-post/list-post.component.html
@@ -19,7 +19,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="index.html">Landing Page 1</a></li>
+              <li><a href="../../../../../index.html">Landing Page 1</a></li>
               <li><a href="index-register.html">Landing Page 2</a></li>
             </ul>
           </li>
@@ -51,7 +51,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu page-list">
-              <li><a href="index.html">Landing Page 1</a></li>
+              <li><a href="../../../../../index.html">Landing Page 1</a></li>
               <li><a href="index-register.html">Landing Page 2</a></li>
               <li><a href="newsfeed.html">Newsfeed</a></li>
               <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
@@ -161,51 +161,10 @@
             </div>
           </div><!-- Post Create Box End-->
 
-          <!-- Post Content
+
           ================================================= -->
-          <div class="post-content">
+          <tbody *ngFor="let ct of post ; index as i">
 
-            <!--Post Date-->
-            <div class="post-date hidden-xs hidden-sm">
-              <h5>Sarah</h5>
-              <p class="text-grey">Sometimes ago</p>
-            </div><!--Post Date End-->
-
-            <img src="http://placehold.it/1920x1280" alt="post-image" class="img-responsive post-image" />
-            <div class="post-container">
-              <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
-              <div class="post-detail">
-                <div class="user-info">
-                  <h5><a href="timeline.html" class="profile-link">Sarah Cruiz</a> <span class="following">following</span></h5>
-                  <p class="text-muted">Published a photo about 15 mins ago</p>
-                </div>
-                <div class="reaction">
-                  <a class="btn text-green"><i class="icon ion-thumbsup"></i> 13</a>
-                  <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
-                </div>
-                <div class="line-divider"></div>
-                <div class="post-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <i class="em em-anguished"></i> <i class="em em-anguished"></i> <i class="em em-anguished"></i></p>
-                </div>
-                <div class="line-divider"></div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <p><a href="timeline.html" class="profile-link">Diana </a><i class="em em-laughing"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                </div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <p><a href="timeline.html" class="profile-link">John</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                </div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <input type="text" class="form-control" placeholder="Post a comment">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Post Content
-          ================================================= -->
           <div class="post-content">
 
             <!--Post Date-->
@@ -220,7 +179,7 @@
               <div class="post-detail">
                 <div class="user-info">
                   <h5><a href="timeline.html" class="profile-link">Sarah Cruiz</a> <span class="following">following</span></h5>
-                  <p class="text-muted">Yesterday</p>
+                  <p class="text-muted">{{ct.createAt}}</p>
                 </div>
                 <div class="reaction">
                   <a class="btn text-green"><i class="icon ion-thumbsup"></i> 49</a>
@@ -228,7 +187,9 @@
                 </div>
                 <div class="line-divider"></div>
                 <div class="post-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <i class="em em-anguished"></i> <i class="em em-anguished"></i> <i class="em em-anguished"></i></p>
+
+
+  <td>{{ct.content}}</td>
                 </div>
                 <div class="line-divider"></div>
                 <div class="post-comment">
@@ -246,48 +207,10 @@
               </div>
             </div>
           </div>
-
+          </tbody>
           <!-- Post Content
           ================================================= -->
-          <div class="post-content">
 
-            <!--Post Date-->
-            <div class="post-date hidden-xs hidden-sm">
-              <h5>Sarah</h5>
-              <p class="text-grey">10/21/2016</p>
-            </div><!--Post Date End-->
-
-            <div class="post-container">
-              <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
-              <div class="post-detail">
-                <div class="user-info">
-                  <h5><a href="timeline.html" class="profile-link">Sarah Cruiz</a> <span class="following">following</span></h5>
-                  <p class="text-muted">2 days ago</p>
-                </div>
-                <div class="reaction">
-                  <a class="btn text-green"><i class="icon ion-thumbsup"></i> 49</a>
-                  <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
-                </div>
-                <div class="line-divider"></div>
-                <div class="post-text">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <i class="em em-anguished"></i> <i class="em em-anguished"></i> <i class="em em-anguished"></i></p>
-                </div>
-                <div class="line-divider"></div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <p><a href="timeline.html" class="profile-link">Diana </a><i class="em em-laughing"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                </div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <p><a href="timeline.html" class="profile-link">John</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                </div>
-                <div class="post-comment">
-                  <img src="http://placehold.it/300x300" alt="" class="profile-photo-sm" />
-                  <input type="text" class="form-control" placeholder="Post a comment">
-                </div>
-              </div>
-            </div>
-          </div>
 
         </div>
         <div class="col-md-2 static">
