--- a/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
+++ b/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
@@ -157,7 +157,7 @@
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-lg" />
               </div>
               <div class="col-md-7 col-sm-7">
-                <h5><a href="#" class="profile-link">{{user.username}}</a></h5>
+                <h5><a href="#" class="profile-link">{{user?.username}}</a></h5>
                 <p>Software Engineer</p>
                 <p class="text-muted">500m away</p>
               </div>
