--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -98,7 +98,7 @@
 <!--        Hiển thị thông tin cá nhân user-->
         <div class="profile-card">
           <img src="http://placehold.it/300x300" alt="user" class="profile-photo"/>
-          <h5><a href="timeline.html" class="text-white">{{userDetail.username}}</a></h5>
+          <h5><a href="timeline.html" class="text-white">{{userDetail?.username}}</a></h5>
           <a href="#" class="text-white"><i class="ion ion-android-person-add"></i> 1,299 followers</a>
         </div><!--profile card ends-->
         <ul class="nav-news-feed">
