--- a/src/app/module/user/edit-profile/edit-profile.component.html
+++ b/src/app/module/user/edit-profile/edit-profile.component.html
@@ -138,7 +138,7 @@
 
           <!--Edit Profile Menu-->
           <ul class="edit-menu">
-            <li class="active"><i class="icon ion-ios-information-outline"></i><a routerLink="/user/edit">Basic Information</a></li>
+            <li class="active"><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail">Basic Information</a></li>
 <!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
 <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
             <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>
