--- a/src/app/module/user/user-detail/user-detail.component.html
+++ b/src/app/module/user/user-detail/user-detail.component.html
@@ -4,27 +4,30 @@
 
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo" /></a>
+        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo"/></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right main-menu">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
               <li><a href="index.html">Landing Page 1</a></li>
               <li><a href="index-register.html">Landing Page 2</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
               <li><a href="newsfeed.html">Newsfeed</a></li>
               <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
@@ -35,7 +38,8 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
               <li><a href="timeline-about.html">Timeline About</a></li>
@@ -49,7 +53,8 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu page-list">
               <li><a href="index.html">Landing Page 1</a></li>
               <li><a href="index-register.html">Landing Page 2</a></li>
@@ -67,9 +72,10 @@
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a >{{currentUser.username}}</a></li>
-          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}" alt=""></li>
-          <li class="dropdown"><a (click)="logout()" >Logout</a></li>
+          <li class="dropdown"><a>{{currentUser.username}}</a></li>
+          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}"
+                                    alt=""></li>
+          <li class="dropdown"><a (click)="logout()">Logout</a></li>
         </ul>
         <form class="navbar-form navbar-right hidden-sm">
           <div class="form-group">
@@ -95,7 +101,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="profile-info">
-              <img src="{{avatar}}" alt="" class="img-responsive profile-photo" />
+              <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
               <h3>{{currentUser.username}}</h3>
               <p class="text-muted">Creative Director</p>
             </div>
@@ -117,7 +123,7 @@
       <!--Timeline Menu for Small Screens-->
       <div class="navbar-mobile hidden-lg hidden-md">
         <div class="profile-info">
-          <img src="{{avatar}}" alt="" class="img-responsive profile-photo" />
+          <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
           <h4>Sarah Cruiz</h4>
           <p class="text-muted">Creative Director</p>
         </div>
@@ -138,88 +144,48 @@
 
           <!--Edit Profile Menu-->
           <ul class="edit-menu">
-            <li ><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail">Basic Information</a></li>
+            <li class="active"><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail">Basic
+              Information</a></li>
             <!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
             <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
             <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>
-            <li class="active"><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
+            <li><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
           </ul>
         </div>
         <div class="col-md-7">
 
-          <!-- Change Password
-             ================================================= -->
-          <div class="edit-profile-container">
-            <div class="block-title">
-              <h4 class="grey"><i class="icon ion-ios-locked-outline"></i>Change Password</h4>
-              <div class="line"></div>
-              <p>Create a new password with 6-32 characters. A strong password is a password that is a combination of characters, numbers, and symbols.</p>
-              <div class="line"></div>
+          <!-- About
+              ================================================= -->
+          <div class="about-profile">
+            <div class="about-content-block">
+              <h4 class="grey"><i class="ion-ios-information-outline icon-in-title"></i>Personal Information</h4>
             </div>
-            <div class="edit-block">
-              <form [formGroup]="updateForm" (ngSubmit)="update()" name="update-pass" id="education" class="form-inline">
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <label for="my-password">Old password</label>
-                    <input formControlName="password" id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Old password"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['password'].errors?.['required']
-         && updateForm.controls['password'].touched">Password is required!
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-6">
-                    <label>New password</label>
-                    <input formControlName="newPassword" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="New password"/>
-                  </div>
-                  <div class="form-group col-xs-6">
-                    <label>Confirm password</label>
-                    <input formControlName="confirmPassword" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Confirm password"/>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="form-group col-xs-6">
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['newPassword'].errors?.['required']
-         && updateForm.controls['newPassword'].touched">New password is required!
-                    </div>
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['newPassword'].errors?.['minlength']
-         && updateForm.controls['newPassword'].touched">New password length must be between 6 to 32!
-                    </div>
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['newPassword'].errors?.['maxlength']
-         && updateForm.controls['newPassword'].touched">New password length must be between 6 to 32!
-                    </div>
-                  </div>
-                  <div class="form-group col-xs-6">
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['confirmPassword'].errors?.['required']
-         && updateForm.controls['confirmPassword'].touched">Confirm password is required!
-                    </div>
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['confirmPassword'].errors?.['minlength']
-         && updateForm.controls['confirmPassword'].touched">Confirm password length must be between 6 to 32!
-                    </div>
-                    <div style="color: red;padding-left: 30px" role="alert"
-                         *ngIf="updateForm.controls['confirmPassword'].errors?.['maxlength']
-         && updateForm.controls['confirmPassword'].touched">Confirm password length must be between 6 to 32!
-                    </div>
-                  </div>
-                </div>
-                <p><a href="#">Forgot Password?</a></p>
-                <button class="btn btn-primary">Update Password</button>
-              </form>
+            <div class="about-content-block">
+              <h4 class="grey"><i class="ion-ios-person-outline icon-in-title"></i>Full name</h4>
+              <p>{{currentUser.fullName}}</p>
             </div>
+            <div class="about-content-block">
+              <h4 class="grey"><i class="ion-ios-location-outline icon-in-title"></i>Location</h4>
+              <p>{{currentUser.address}}</p>
+            </div>
+            <div class="about-content-block">
+              <h4 class="grey"><i class="ion-ios-chatboxes-outline icon-in-title"></i>Phone</h4>
+              <p>{{currentUser.phone}}</p>
+            </div>
+            <div class="about-content-block">
+              <h4 class="grey"><i class="ion-ios-heart-outline icon-in-title"></i>Interests</h4>
+              <p>{{currentUser.favorite}}</p>
+            </div>
+
           </div>
 
           <!--Sticky Timeline Activity Sidebar-->
 
+        </div>
+        <div class="col-md-2 static">
+          <div id="sticky-sidebar">
+            <button class="btn btn-primary" routerLink="/user/edit">Edit profile</button>
+          </div>
         </div>
       </div>
     </div>
@@ -234,7 +200,7 @@
     <div class="row">
       <div class="footer-wrapper">
         <div class="col-md-3 col-sm-3">
-          <a href=""><img src="assets/images/logo-black.png" alt="" class="footer-logo" /></a>
+          <a href=""><img src="assets/images/logo-black.png" alt="" class="footer-logo"/></a>
           <ul class="list-inline social-icons">
             <li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
             <li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
